--- a/pom.xml
+++ b/pom.xml
@@ -39,13 +39,12 @@
 
 
 	<modules>
-		<module>xiao-web</module>
 		<module>xiao-model</module>
+		<module>xiao-service</module>
+		<module>xiao-web</module>
 	</modules>
 
 	<dependencyManagement>
-
-
 		<dependencies>
 			<dependency>
 				<groupId>com.alibaba</groupId>
