--- a/xiao-service/pom.xml
+++ b/xiao-service/pom.xml
@@ -62,5 +62,9 @@
 			<groupId>org.logback-extensions</groupId>
 			<artifactId>logback-ext-spring</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.perf4j</groupId>
+			<artifactId>perf4j</artifactId>
+		</dependency>
 	</dependencies>
 </project>
