--- a/xiao-web/pom.xml
+++ b/xiao-web/pom.xml
@@ -110,6 +110,10 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.perf4j</groupId>
+            <artifactId>perf4j</artifactId>
+        </dependency>
 
     </dependencies>
 
