--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 				<artifactId>commons-collections</artifactId>
 				<version>${commons-collections-version}</version>
 			</dependency>
+			<dependency>
+				<groupId>commons-jexl</groupId>
+				<artifactId>commons-jexl</artifactId>
+				<version>1.1</version>
+			</dependency>
 			<!--apache commons-->
 
 			<!-- jsp -->
@@ -251,6 +256,7 @@
 			<!--mock-->
 
 			<!--log-->
+			<!--jcl to slf4j，other have log4j-over-slf4j、jul-to-slf4j-->
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
@@ -342,6 +348,18 @@
 				<version>1.8.9</version>
 			</dependency>
 			<!--aop-->
+
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>3.2.5</version>
+			</dependency>
+
+			<dependency>
+				<groupId>asm</groupId>
+				<artifactId>asm</artifactId>
+				<version>3.3.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
