--- a/xiao-web/pom.xml
+++ b/xiao-web/pom.xml
@@ -115,6 +115,16 @@
             <artifactId>perf4j</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-jexl</groupId>
+            <artifactId>commons-jexl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
