--- a/xiao-web/src/main/webapp/WEB-INF/web.xml
+++ b/xiao-web/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,8 @@
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 		 id="WebApp_ID" version="3.0">
 
+	<!--web.xml加载顺序 ：context- param -> listener -> filter -> servlet-->
+
 	<display-name>xiao-web</display-name>
 
 	<listener>
@@ -49,7 +51,7 @@
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:applicationContext*.xml</param-value>
+		<param-value>classpath*:spring/applicationContext.xml</param-value>
 	</context-param>
 
 	<!-- logback configure -->
