--- a/xiao-service/pom.xml
+++ b/xiao-service/pom.xml
@@ -94,6 +94,10 @@
 			<artifactId>poi</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
 
 	</dependencies>
 </project>
