--- a/xiao-web/src/main/resources/environment/dev/redis.properties
+++ b/xiao-web/src/main/resources/environment/dev/redis.properties
@@ -1,5 +1,6 @@
 redis.host=127.0.0.1
 redis.port=6379
+redis.timeout=10000
 redis.pool.maxTotal=300
 redis.pool.maxIdle=200
 redis.pool.maxWaitMillis=3000
