--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,21 @@
 				<artifactId>asm</artifactId>
 				<version>3.3.1</version>
 			</dependency>
+
+			<!--连接池 -alibaba-->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>1.1.2</version>
+			</dependency>
+			<!--连接池-->
+
+			<!-- ehcache 相关依赖  -->
+			<dependency>
+				<groupId>net.sf.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<version>2.10.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
